// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PipelinesDialog > it renders correctly in multi user mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="padding-right: 0px; overflow: hidden;"
  >
    <div
      aria-hidden="true"
    />
    <div
      class="MuiDialog-root"
      role="presentation"
      style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
    >
      <div
        aria-hidden="true"
        class="MuiBackdrop-root"
        style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      />
      <div
        data-test="sentinelStart"
        tabindex="0"
      />
      <div
        class="MuiDialog-container MuiDialog-scrollPaper"
        role="none presentation"
        style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        tabindex="-1"
      >
        <div
          class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiPaper-elevation24 MuiPaper-rounded"
          id="pipelineSelectorDialog"
          role="dialog"
        >
          <div
            class="MuiDialogContent-root"
          >
            <div
              class="root_f1vld0bw topLevelToolbar_faeji1w"
            >
              <div
                style="min-width: 100px;"
              >
                <div
                  class="breadcrumbs_farqb1 flex_f16jawj4"
                />
                <div
                  class="flex_f16jawj4"
                >
                  <span
                    class="pageName_fe4yf9p ellipsis_f15ay66x"
                    data-testid="page-title"
                  >
                    Choose a pipeline
                  </span>
                </div>
              </div>
              <div
                class="actions_ffoeey"
              />
            </div>
            <div
              class="page_f1flacxk f1h5lfj6"
            >
              <div
                class="tabs_ff8rz57"
              >
                <div
                  class="indicator_fp4eggn"
                  style="left: -5px; width: 5px; display: block;"
                />
                <span
                  style="display: inline-block; min-width: 20px; width: 20px;"
                />
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text button_ff2g68i active_fz0wpsl"
                  tabindex="0"
                  title="Only people who have access to this namespace will be able to view and use these pipelines."
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <span>
                      Private
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text button_ff2g68i"
                  tabindex="0"
                  title="Everyone in your organization will be able to view and use these pipelines."
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <span>
                      Shared
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <div
                class="pageOverflowHidden_f15djeb2"
              >
                <div>
                  <div
                    class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
                    spellcheck="false"
                    style="height: 48px; max-width: 100%; width: 100%;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
                      data-shrink="true"
                      for="tableFilterBox"
                      id="tableFilterBox-label"
                    >
                      Filter pipelines
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
                    >
                      <div
                        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          style="color: rgb(128, 134, 139); padding-right: 16px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                          />
                        </svg>
                      </div>
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
                        id="tableFilterBox"
                        type="text"
                        value=""
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-3 PrivateNotchedOutline-legendNotched-4"
                        >
                          <span>
                            Filter pipelines
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="header_f15jqnss"
                >
                  <div
                    class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
                  >
                    <span
                      style="display: inline-block; min-width: 42px; width: 42px;"
                    />
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 25%;"
                    title="Pipeline name"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
                      role="button"
                      tabindex="0"
                      title="Sort"
                    >
                      Pipeline name
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 50%;"
                    title="Description"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
                      role="button"
                      tabindex="0"
                      title="Cannot sort by this column"
                    >
                      Description
                    </span>
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 25%;"
                    title="Uploaded on"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
                      role="button"
                      tabindex="0"
                      title="Sort"
                    >
                      Uploaded on
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="scrollContainer_fea2b5v"
                  style="min-height: 60px;"
                >
                  <div
                    class="expandableContainer_f1l0zr01"
                  >
                    <div
                      aria-checked="false"
                      class="tableRow row_f12b5y4d"
                      data-row-id="run-pipeline-id"
                      data-testid="table-row"
                      role="checkbox"
                      tabindex="-1"
                    >
                      <div
                        class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <input
                              class="PrivateSwitchBase-input-8"
                              type="radio"
                              value=""
                            />
                            <div
                              class="PrivateRadioButtonIcon-root-9"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                />
                              </svg>
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-10"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                />
                              </svg>
                            </div>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        <span
                          class=""
                          title="Name: mock pipeline name"
                        >
                          mock pipeline name
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 50%;"
                      />
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        -
                      </div>
                    </div>
                  </div>
                  <div
                    class="expandableContainer_f1l0zr01"
                  >
                    <div
                      aria-checked="false"
                      class="tableRow row_f12b5y4d"
                      data-row-id="run-pipeline-id"
                      data-testid="table-row"
                      role="checkbox"
                      tabindex="-1"
                    >
                      <div
                        class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <input
                              class="PrivateSwitchBase-input-8"
                              type="radio"
                              value=""
                            />
                            <div
                              class="PrivateRadioButtonIcon-root-9"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                />
                              </svg>
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-10"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                />
                              </svg>
                            </div>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        <span
                          class=""
                          title="Name: mock pipeline name"
                        >
                          mock pipeline name
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 50%;"
                      />
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        -
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="footer_f1fl9hjk"
                >
                  <span
                    class="fzbgmju"
                  >
                    Rows per page:
                  </span>
                  <div
                    class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
                  >
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
                    >
                      <div
                        aria-haspopup="listbox"
                        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                        role="button"
                        tabindex="0"
                      >
                        10
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput"
                        tabindex="-1"
                        value="10"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSelect-icon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                  </div>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiDialogActions-root MuiDialogActions-spacing"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary"
              id="cancelPipelineSelectionBtn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Cancel
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary Mui-disabled Mui-disabled"
              disabled=""
              id="usePipelineBtn"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Use this pipeline
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        data-test="sentinelEnd"
        tabindex="0"
      />
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelinesDialog > it renders correctly in single user mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="padding-right: 0px; overflow: hidden;"
  >
    <div
      aria-hidden="true"
    />
    <div
      class="MuiDialog-root"
      role="presentation"
      style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
    >
      <div
        aria-hidden="true"
        class="MuiBackdrop-root"
        style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      />
      <div
        data-test="sentinelStart"
        tabindex="0"
      />
      <div
        class="MuiDialog-container MuiDialog-scrollPaper"
        role="none presentation"
        style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        tabindex="-1"
      >
        <div
          class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiPaper-elevation24 MuiPaper-rounded"
          id="pipelineSelectorDialog"
          role="dialog"
        >
          <div
            class="MuiDialogContent-root"
          >
            <div
              class="root_f1vld0bw topLevelToolbar_faeji1w"
            >
              <div
                style="min-width: 100px;"
              >
                <div
                  class="breadcrumbs_farqb1 flex_f16jawj4"
                />
                <div
                  class="flex_f16jawj4"
                >
                  <span
                    class="pageName_fe4yf9p ellipsis_f15ay66x"
                    data-testid="page-title"
                  >
                    Choose a pipeline
                  </span>
                </div>
              </div>
              <div
                class="actions_ffoeey"
              />
            </div>
            <div
              class="page_f1flacxk f1h5lfj6"
            >
              <div
                class="pageOverflowHidden_f15djeb2"
              >
                <div>
                  <div
                    class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
                    spellcheck="false"
                    style="height: 48px; max-width: 100%; width: 100%;"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
                      data-shrink="true"
                      for="tableFilterBox"
                      id="tableFilterBox-label"
                    >
                      Filter pipelines
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
                    >
                      <div
                        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          style="color: rgb(128, 134, 139); padding-right: 16px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                          />
                        </svg>
                      </div>
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
                        id="tableFilterBox"
                        type="text"
                        value=""
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-12 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
                      >
                        <legend
                          class="PrivateNotchedOutline-legendLabelled-14 PrivateNotchedOutline-legendNotched-15"
                        >
                          <span>
                            Filter pipelines
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="header_f15jqnss"
                >
                  <div
                    class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
                  >
                    <span
                      style="display: inline-block; min-width: 42px; width: 42px;"
                    />
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 25%;"
                    title="Pipeline name"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
                      role="button"
                      tabindex="0"
                      title="Sort"
                    >
                      Pipeline name
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 50%;"
                    title="Description"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
                      role="button"
                      tabindex="0"
                      title="Cannot sort by this column"
                    >
                      Description
                    </span>
                  </div>
                  <div
                    class="columnName_f1kdqshe"
                    style="width: 25%;"
                    title="Uploaded on"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x MuiTableSortLabel-active"
                      role="button"
                      tabindex="0"
                      title="Sort"
                    >
                      Uploaded on
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="scrollContainer_fea2b5v"
                  style="min-height: 60px;"
                >
                  <div
                    class="expandableContainer_f1l0zr01"
                  >
                    <div
                      aria-checked="false"
                      class="tableRow row_f12b5y4d"
                      data-row-id="run-pipeline-id"
                      data-testid="table-row"
                      role="checkbox"
                      tabindex="-1"
                    >
                      <div
                        class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-16 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <input
                              class="PrivateSwitchBase-input-19"
                              type="radio"
                              value=""
                            />
                            <div
                              class="PrivateRadioButtonIcon-root-20"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                />
                              </svg>
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-21"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                />
                              </svg>
                            </div>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        <span
                          class=""
                          title="Name: mock pipeline name"
                        >
                          mock pipeline name
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 50%;"
                      />
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        -
                      </div>
                    </div>
                  </div>
                  <div
                    class="expandableContainer_f1l0zr01"
                  >
                    <div
                      aria-checked="false"
                      class="tableRow row_f12b5y4d"
                      data-row-id="run-pipeline-id"
                      data-testid="table-row"
                      role="checkbox"
                      tabindex="-1"
                    >
                      <div
                        class="cell_fy8nr2z selectionToggle_f1ds3nvo"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-16 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <input
                              class="PrivateSwitchBase-input-19"
                              type="radio"
                              value=""
                            />
                            <div
                              class="PrivateRadioButtonIcon-root-20"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                                />
                              </svg>
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-21"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                                />
                              </svg>
                            </div>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        <span
                          class=""
                          title="Name: mock pipeline name"
                        >
                          mock pipeline name
                        </span>
                      </div>
                      <div
                        class="cell_fy8nr2z"
                        style="width: 50%;"
                      />
                      <div
                        class="cell_fy8nr2z"
                        style="width: 25%;"
                      >
                        -
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="footer_f1fl9hjk"
                >
                  <span
                    class="fzbgmju"
                  >
                    Rows per page:
                  </span>
                  <div
                    class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
                  >
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
                    >
                      <div
                        aria-haspopup="listbox"
                        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                        role="button"
                        tabindex="0"
                      >
                        10
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput"
                        tabindex="-1"
                        value="10"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSelect-icon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                  </div>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiDialogActions-root MuiDialogActions-spacing"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary"
              id="cancelPipelineSelectionBtn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Cancel
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary Mui-disabled Mui-disabled"
              disabled=""
              id="usePipelineBtn"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Use this pipeline
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        data-test="sentinelEnd"
        tabindex="0"
      />
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
